# delfem3-python

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml  requirements.txt  test.py  test0.py
.github/workflows/: CI.yml
examples/: 00_qt5_window_test.py  00_qt_window_test.py  01_mesh_view.py  02_mesh_primitive.py  03_loadobj_triquad_mesh.py  04_pick_triquad_mesh.py
pydelfem3/: __init__.py  drawer_meshpos.py  drawer_meshposcolor.py  drawer_transform.py  qtglwidget_viewer3.py  view_navigation3.py
pydelfem3/tests/: test.py
src/: lib.rs
